# AI-File-Organizer-Offline-CLI-GUI-

./: README.md
ai_file_organizer/: Cargo.toml  README.md
ai_file_organizer/config/: default_rules.json
ai_file_organizer/src/: cli.rs  config.rs  constants.rs  gui.rs  main.rs  models.rs
ai_file_organizer/src/models/: file_info.rs
ai_file_organizer/src/organizer/: ai.rs  archives.rs  classifier.rs  duplicates.rs  metadata.rs  mod.rs  renamer.rs  rules.rs  scanner.rs  undo.rs  utils.rs  watcher.rs
