[package]
name = "ai_file_organizer"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI and Core
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
walkdir = "2.5.0"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10.4"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
notify = "6.1.1"

# File Processing
infer = "0.15.0"
blake3 = "1.5.1"
sha2 = "0.10.8"
image = "0.25.1"
kamadak-exif = "0.5.5"
pdf-extract = "0.7.2"
zip = "0.6.6"

# AI / ML
reqwest = { version = "0.12.3", features = ["json"] }
# ort = "1.16.2" # ONNX Runtime - commenting out to avoid build issues during initial setup

# GUI
eframe = "0.26.2"
egui = "0.26.2"

[dev-dependencies]
tempfile = "3.10"
